@@ -4,6 +4,8 @@ Java source code pertaining to the features of latest early access builds.
 Refer this link for the bleeding edge of java tech: https://jdk.java.net/
 
 ## Java 23
-Download from here: https://jdk.java.net/23/
+Download Java binary from here: https://jdk.java.net/23/
 
 Features: https://openjdk.org/projects/jdk/23/
+
+Run it with: java **--enable-preview** PrimitiveTypesSwitch.java
